Modificação nos htmls

--- a/chef/templates/chef/base.html
+++ b/chef/templates/chef/base.html
@@ -43,7 +43,6 @@
           <!-- Modal Trigger -->
           <a href="#modal1" class="btn-large waves-effect waves-light yellow darken-3 lighten-1 modal-trigger black-text">{% block botao %}{% endblock %}</a>
         </div>
-        <br><br>
       </div>
     </div>
     <img class="right" style="width:200px; margin-top:-250px" src="{% static 'imagens/Le cheff.png' %}" alt="">
@@ -83,7 +82,7 @@
     </div>
   </div>
 
-<div style="margin:-28px" class="grey darken-4">
+<div style="" class="grey darken-4">
   <br>
 {% block content %}
 {% endblock %}
@@ -101,7 +100,7 @@
     <div class="parallax"><img src="{% static 'imagens/b9.jpg' %}" alt="Unsplashed background img 2"></div>
   </div>
 
-  <div style="margin:-28px" class="grey darken-4">
+  <div style="" class="grey darken-4">
     <br>
   {% block content2 %}
   {% endblock %}
