--- a/chef/templates/chef/home.html
+++ b/chef/templates/chef/home.html
@@ -34,8 +34,26 @@
 {% block botao %}Sobre Nós{% endblock %}
 {% block titulo %}Sobre Nós{% endblock %}
 {% block modal %}
-<div class="container center-align flow-text">
-  <h2>A delicia da culinária</h2>
-  <p style="color:gray">Trabalhamos com a cozinha internacional, oferecendo pratos italianos, franceses, espanhois, brasileiros e muito mais!</p>
+<div class="container">
+  <h2 class="center">Le Cheff</h2>
+  <p style="color:black">
+CNPJ: 29.008.181/0001-84.<br>
+<br>
+Serviços: Fazemos festas de 15 anos/ noivados/ casamentos/ bodas/ executivos e etc.<br>
+<br>
+Disponibilizamos de:<br>
+- Chef de cozinha*<br>
+- Auxiliares de cozinha<br>
+- Garçons e etc<br>
+*Utilizamos equipamentos de cozinha da própria empresa (Le Cheff).<br>
+<br>
+Contatos:
+<br>
+E-mail: Lecheff@outlook.com.br<br>
+Whatsapp: (83) 9 8674-7464<br>
+Instagram: lecheff10<br>
+Facebook: https://m.facebook.com/Le.Cheff.10<br>
+<br>
+"Monte sua festa conosco"</p>
 </div>
 {% endblock %}
